<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.account.AccountEditFragment">

    <TextView
        android:id="@+id/tv_account_edit_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ellipsize="start"
        android:gravity="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_account_type_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ellipsize="start"
        android:gravity="center"
        android:text="@string/account_type"
        android:textSize="12sp" />

    <Spinner
        android:id="@+id/spinner_account_type"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:ellipsize="start"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv_account_name_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ellipsize="start"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/et_account_name"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:ellipsize="start"
        android:gravity="center"
        android:hint="@string/input_name"
        android:importantForAutofill="no"
        android:inputType="textAutoCorrect|textCapSentences"
        android:textSize="20sp"/>

    <CheckBox
        android:id="@+id/chbx_is_active_account"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/active"
        android:textSize="12sp"
        tools:ignore="SmallSp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <ImageButton
            android:id="@+id/btn_cancel"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/circle_button"
            android:baselineAligned="false"
            android:contentDescription="@string/cancel"
            android:elevation="6dp"
            android:src="@drawable/cancel"
            android:stateListAnimator="@null"
            android:translationZ="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_save_account"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/circle_button"
            android:baselineAligned="false"
            android:contentDescription="@string/save"
            android:elevation="6dp"
            android:src="@drawable/check"
            android:stateListAnimator="@null"
            android:translationZ="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_remove_account"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/circle_button"
            android:baselineAligned="false"
            android:contentDescription="@string/remove"
            android:elevation="6dp"
            android:src="@drawable/delete"
            android:stateListAnimator="@null"
            android:translationZ="4dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_save_account"
            app:layout_constraintStart_toEndOf="@+id/btn_cancel"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>