<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.operation.OperationEditFragment">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_output"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/output"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/input"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_transfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/transfer"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_operation_edit_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:ellipsize="start"
        android:gravity="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_date_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ellipsize="start"
        android:gravity="center"
        android:text="@string/operation_date"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_date"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:ellipsize="start"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_account_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:ellipsize="start"
            android:gravity="center"
            android:text="@string/output_from_account"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_account_to_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:ellipsize="start"
            android:gravity="center"
            android:text="@string/input_to_account"
            android:textSize="12sp"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_account"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:ellipsize="start"
            android:gravity="center"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/spinner_account_to"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:ellipsize="start"
            android:gravity="center"
            android:textAlignment="center"
            android:visibility="invisible" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_category_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ellipsize="start"
        android:gravity="center"
        android:text="@string/category"
        android:textSize="12sp" />

    <Spinner
        android:id="@+id/spinner_category"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:ellipsize="start"
        android:gravity="center"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tv_summ_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ellipsize="start"
        android:gravity="center"
        android:text="@string/summ"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/et_summ"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:autofillHints=""
        android:ellipsize="start"
        android:gravity="center|top"
        android:hint="@string/summ"
        android:inputType="numberSigned|numberDecimal" />

    <TextView
        android:id="@+id/tv_descr_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ellipsize="start"
        android:gravity="center"
        android:text="@string/notes"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/et_description"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:ellipsize="start"
        android:gravity="center|top"
        android:inputType="textAutoCorrect|textCapSentences"
        android:hint="@string/notes" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <ImageButton
            android:id="@+id/btn_cancel"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="50dp"
            android:background="@drawable/circle_button"
            android:baselineAligned="false"
            android:elevation="6dp"
            android:src="@drawable/baseline_cancel_24"
            android:stateListAnimator="@null"
            android:translationZ="4dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageButton
            android:id="@+id/btn_save_operation"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/circle_button"
            android:baselineAligned="false"
            android:elevation="6dp"
            android:src="@drawable/check"
            android:stateListAnimator="@null"
            android:translationZ="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>