<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.operation.OperationFragment">

    <Button
        android:id="@+id/btn_pick_date"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text=""
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/operation_list"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SmallSp"
        android:elevation="6dp"
        android:stateListAnimator="@null"
        android:translationZ="4dp"/>

    <CheckBox
        android:id="@+id/chbx_input_operations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/inputs"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/operation_list"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SmallSp" />

    <CheckBox
        android:id="@+id/chbx_ouput_operations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/outputs"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/operation_list"
        app:layout_constraintEnd_toStartOf="@+id/chbx_input_operations"
        tools:ignore="SmallSp" />

    <CheckBox
        android:id="@+id/chbx_transfer_operations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/transfers"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/operation_list"
        app:layout_constraintEnd_toStartOf="@+id/chbx_ouput_operations"
        tools:ignore="SmallSp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/operation_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="100dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_add_operation"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/circle_button"
        android:src="@drawable/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/operation_list"
        app:layout_constraintVertical_bias="0.5"
        android:elevation="6dp"
        android:stateListAnimator="@null"
        android:translationZ="4dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>